add playlist_track index action / update readme
