# swagger/v1/swagger.yaml
@@ -219,6 +219,33 @@ paths:
         '204':
           description: successful
   "/playlist_tracks":
+    get:
+      summary: get playlist_tracks
+      tags:
+      - playlist_track
+      parameters:
+      - name: Authorization
+        in: header
+        type: integer
+        description: 사용자 인증(user_id 입력)
+        required: true
+      - name: playlist_id
+        in: query
+        type: integer
+        description: playlist
+        required: true
+      - name: page
+        in: query
+        type: string
+        description: page
+        example: 1
+        required: false
+      description: 'playlist_track list를 조회합니다. <br> playlist에 속한 playlist_track만
+        조회합니다. <br> default(플레이리스트) 타입 조회시 사용자 인증을 요구합니다. <br> my_album(내 앨범) 타입은
+        요구하지 않습니다. '
+      responses:
+        '200':
+          description: get playlist_tracks
     post:
       summary: create playlist_track
       tags:
